# azure-financial-crime-risk-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
azureml/: README.md
configs/: aml_rules_config.yaml  customer_risk_config.yaml  data_generation_config.yaml  explainability_config.yaml  feature_config.yaml  fraud_model_config.yaml  genai_investigation_config.yaml  monitoring_config.yaml  project_config.yaml  reporting_config.yaml
dashboard/: dax_measures.md  executive_dashboard_spec.md  kpi_definitions.md  monitoring_dashboard_spec.md  semantic_model_spec.md
diagrams/: architecture_placeholder.md  azure_reference_architecture.md  azure_reference_architecture.mmd
docs/: aml_controls_matrix.md  aml_rule_engine.md  azure_service_mapping.md  cost_and_scalability.md  customer_risk_governance.md  customer_risk_scoring.md  data_governance_and_lineage.md  data_lineage_matrix.md  data_privacy_and_synthetic_data.md  demo_guide.md  explainability_governance.md  feature_engineering.md  fraud_baseline_model.md  genai_investigation_assistant.md  genai_safety_and_governance.md  ingestion_and_validation.md  interview_guide.md  milestone_plan.md  mlops_lifecycle.md  model_card_fraud_baseline.md  model_explainability.md  monitoring_and_drift.md  monitoring_governance.md  non_functional_requirements.md  portfolio_evidence.md  powerbi_governance.md  powerbi_reporting_layer.md  project_overview.md  recruiter_summary.md  release_strategy.md  security_architecture.md  streaming_design.md  synthetic_data_design.md  threat_model.md
infra/: README.md  main.bicep  (+1 more)
(+182 files in other folders)
